--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/lodash": "^4.14.196",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -34,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"gsap": "^3.12.2"
+		"gsap": "^3.12.2",
+		"lodash": "^4.17.21"
 	}
 }
